# blackSwan-Market-Anamoly-Pipeline

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflow/: ci.yml
airflow/dags/: blackswan_dag.py
backend/: Dockerfile  requirements.txt
backend/app/: database.py  main.py  test_db.py
blackswan_dbt/: .user.yml  dbt_project.yml
blackswan_dbt/macros/: generate_schema_name.sql
blackswan_dbt/models/: sources.yml
blackswan_dbt/models/marts/: mart_algo_signals.sql  mart_correlation_matrix.sql  mart_news_impact.sql  mart_sector_performance.sql  mart_technical_indicators.sql  mart_trending_assets.sql
blackswan_dbt/models/staging/: schema.yml  stg_market_news.sql  stg_social_sentiment.sql  stg_stock_prices.sql
blackswan_dbt/tests/: assert_stock_high_gt_low.sql
consumers/: s3_uploader.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  api.js  style.css
frontend/src/components/: AdvancedChartModal.vue  HistoryChart.vue  SectorChart.vue  Sidebar.vue
frontend/src/router/: index.js
frontend/src/views/: Dashboard.vue  Home.vue  News.vue  Placeholder.vue  Signals.vue
producers/: stream_news.py  stream_prices.py  stream_reddit.py
snowflake/: init.sql  raw.sql  storage_int.sql
