[project]
name = "black-swan-engine"
version = "0.1.0"
description = "Real-time Black Swan detection using Kafka, Snowflake, and Alpha Vantage."
readme = "README.md"
# prevents the "Python 3.14" error by forcing tools to use 3.12
requires-python = ">=3.12,<3.13"

dependencies = [
    "confluent-kafka==2.3.0",
    "fastavro==1.9.3",
    "snowflake-connector-python[pandas]==3.7.0",
    "snowflake-sqlalchemy==1.5.1",
    "requests==2.31.0",
    "tenacity==8.2.3",
    "python-dotenv==1.0.1",
    # Pinned to 2.1.4 to satisfy Snowflake Connector requirements
    "pandas==2.1.4",
    "numpy==1.26.3"
]

[project.optional-dependencies]
# Install these only for development (keeps production light)
dev = [
    "pytest==8.0.0",
    "ruff==0.1.14",  # The modern, fast replacement for Black/Flake8
    "dbt-snowflake>=1.7.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# --- Tool Configurations ---

# Configure Ruff (Linter) to enforce clean code
[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
# E = pycodestyle errors, F = Pyflakes, I = Import sorting
select = ["E", "F", "I"]

[tool.hatch.build.targets.wheel]
packages = ["producers", "consumers"]
